# danibot

./: LICENSE  NOTES.md  README.md  ROADMAP.md  danibot.cabal
exe/: Main.hs
lib/Network/: Danibot.hs
lib/Network/Danibot/: Main.hs  Slack.hs
lib/Network/Danibot/Slack/: API.hs  RTM.hs  Types.hs
