Name: danibot
Version: 0.1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
License: MIT
License-File: LICENSE
Copyright: 2015 Daniel Diaz
Author: Daniel Diaz
Maintainer: diaz_carrete@yahoo.com
Bug-Reports: https://github.com/danidiaz/danibot/issues
Synopsis: Slack bot.
Category: Network

extra-source-files:
    README.md
    CHANGELOG

source-repository head
    type: git
    location: git@github.com:danidiaz/danibot.git

executable danibot
    hs-source-dirs: exe
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -O2
    build-depends:         
          base >= 4.7 && < 5
        , danibot

library
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
          base                  >= 4        && < 5   
        , transformers          >= 0.4.3.0
        , wreq                  >= 0.4.1.0 
        , websockets            >= 0.9.6.0
        , wuss                  >= 1.0.2
        , aeson                 >= 0.11.0.0
        , bytestring            >= 0.10.6.0
        , text                  >= 1.2.2.0
        , optparse-applicative  >= 0.12.1.0
        , lens                  >= 4.5
        , lens-aeson            >= 1.0.0.0 
        , monoid-subclasses     >= 0.4.2
    exposed-modules:
        Network.Danibot.Main
        Network.Danibot.Slack.Types
        Network.Danibot.Slack.API
        Network.Danibot.Slack.RTM
    ghc-options: -O2 -Wall
